[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "moderation-module"
version = "0.1.0"
description = "A production-ready Discord moderation system built with discord.py 2.x"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "modules.gg", email = "modulesgg@protonmail.com"},
]
keywords = [
    "discord",
    "bot",
    "moderation",
    "discord.py",
    "community-management",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Chat",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "discord.py>=2.3.0,<3.0.0",
    "jsonschema>=4.17.0",
    "aiofiles>=23.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "ruff>=0.0.280",
]

[project.urls]
Homepage = "https://github.com/modulesgg/moderation-module"
Documentation = "https://github.com/modulesgg/moderation-module/tree/main/docs"
Repository = "https://github.com/modulesgg/moderation-module"
Issues = "https://github.com/modulesgg/moderation-module/issues"
Changelog = "https://github.com/modulesgg/moderation-module/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["moderation*"]
exclude = ["tests*", "scripts*", "docs*"]

[tool.setuptools.package-data]
moderation = ["py.typed"]

# ---------------------------------------------------------------------------
# Black Configuration
# ---------------------------------------------------------------------------
[tool.black]
line-length = 100
target-version = ["py311", "py312", "py313"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.git
  | \.venv
  | \.env
  | venv
  | build
  | dist
)/
'''

# ---------------------------------------------------------------------------
# isort Configuration
# ---------------------------------------------------------------------------
[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
known_first_party = ["moderation"]

# ---------------------------------------------------------------------------
# mypy Configuration
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
show_column_numbers = true
namespace_packages = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = "discord.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "jsonschema.*"
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Ruff Configuration
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "D",   # pydocstyle
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "D100",  # Missing docstring in public module (handled per-file)
    "D104",  # Missing docstring in public package
]

[tool.ruff.pydocstyle]
convention = "google"

# ---------------------------------------------------------------------------
# pytest Configuration
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

